[package]
name = "vcr-cassette"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/vcr-cassette"
documentation = "https://docs.rs/vcr-cassette"
description = "Serializer and deserializer for the VCR Cassette format"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
